J-259 + fixed shifting markup when click on bell

--- a/frontend/src/assets/css/scaffolding.scss
+++ b/frontend/src/assets/css/scaffolding.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 
 body {
@@ -24,6 +24,10 @@ body {
   background-color: var(--color-primary-light);
   text-rendering: optimizeSpeed;
   overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
 
 img {
